--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,10 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-      - name: Install lock
-        run: npm install --package-lock-only
+      #- name: Install lock
+      #  run: npm install --package-lock-only
       - name: Install dependencies
-        run: npm ci
+        run: npm i
       - name: Build
         run: npm run build
       - name: Setup Pages
