--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,10 +35,8 @@ jobs:
         with:
           node-version: 20
           cache: 'npm'
-      #- name: Install lock
-      #  run: npm install --package-lock-only
       - name: Install dependencies
-        run: npm i
+        run: npm ci
       - name: Build
         run: npm run build
       - name: Setup Pages
